--- a/assets2/css/style.css
+++ b/assets2/css/style.css
@@ -189,30 +189,40 @@ h1, h2, h3, h4, h5,
   font-size: 16px;
   border-radius: 30px;
   padding: 10px 30px; }
-  .btn:hover, .btn:active, .btn:focus {
-    outline: none;
-    -webkit-box-shadow: none !important;
-    box-shadow: none !important; }
-  .btn.btn-primary {
-    border-width: 2px;
-    background: #FBC02D;
-    border-color: #FBC02D;
-    color: #fff;
-    position: relative;
-    top: 0;
-    -webkit-transition: .3s all ease;
-    -o-transition: .3s all ease;
-    transition: .3s all ease;
-    -webkit-box-shadow: 0 4px 20px -5px rgba(66, 133, 244, 0.4);
-    box-shadow: 0 4px 20px -5px rgba(66, 133, 244, 0.4); }
-    .btn.btn-primary:hover {
-      top: -2px;
-      background: #283339;
-      border-color: #283339;
-      color: #fff;
-      -webkit-box-shadow: 0 5px 30px -5px rgba(66, 133, 244, 0.7) !important;
-      box-shadow: 0 5px 30px -5px rgba(66, 133, 244, 0.7) !important; }
-
+.btn:hover, .btn:active, .btn:focus {
+  outline: none;
+  -webkit-box-shadow: none !important;
+  box-shadow: none !important; }
+.btn.btn-primary {
+  border-width: 2px;
+  background: #FBC02D;
+  border-color: #FBC02D;
+  color: #fff;
+  position: relative;
+  top: 0;
+  -webkit-transition: .3s all ease;
+  -o-transition: .3s all ease;
+  transition: .3s all ease;
+  -webkit-box-shadow: 0 4px 20px -5px rgba(66, 133, 244, 0.4);
+  box-shadow: 0 4px 20px -5px rgba(66, 133, 244, 0.4); }
+.btn.btn-primary:hover {
+  top: -2px;
+  background: #283339;
+  border-color: #283339;
+  color: #fff;
+  -webkit-box-shadow: 0 5px 30px -5px rgba(66, 133, 244, 0.7) !important;
+  box-shadow: 0 5px 30px -5px rgba(66, 133, 244, 0.7) !important; 
+}
+/* .btn-outline-primary {
+    background: transparent !important;
+    border-color: #FBC02D !important;
+    color: #FBC02D !important;
+}
+.btn-outline-primary:hover {
+    background: #283339 !important;
+    border-color: #283339 !important;
+    color: #fff !important;
+} */
 .line-height-1 {
   line-height: 1 !important; }
 
